--- a/Python Workout Book.ipynb
+++ b/Python Workout Book.ipynb
@@ -409,30 +409,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def slice(name, lower, upper):\n",
-    "    while lower < upper:\n",
-    "        print(name[lower], end='')\n",
-    "        lower = lower + 1\n",
-    "slice('Vanessa', 0, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "'kasozi' in ['kasozi', 'vincent']\n",
-    "'k' in 'kasozi'\n",
-    "2 in {1, 5, 6}"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -448,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2104,10 +2080,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['192.168.1.101', '192.168.1.102', '192.168.1.103']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def read_file(file_name):\n",
+    "    for line in open(file_name):\n",
+    "        yield line.split()[0]\n",
+    "\n",
+    "def get_ip_addresses():\n",
+    "    ip_addresses = []\n",
+    "    for ip_address in read_file('data/apache.txt'):\n",
+    "        ip_addresses.append(ip_address)\n",
+    "    return list(set(ip_addresses)) # first convert it to a set to remove duplicates and then convert it to a list\n",
+    "        \n",
+    "get_ip_addresses()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2144,6 +2143,364 @@
    "source": [
     "## Files"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a python program that reads a text file and prints the last line in the text file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Namuyiga Phionah\n",
+      "Nabukenya Flavia\n",
+      "Namatovu Viola\n",
+      "kasozi Vincent\n",
+      "Mbidde Edward\n",
+      "Nakachwa Bridget\n",
+      "Bukenya Brian\n"
+     ]
+    }
+   ],
+   "source": [
+    "def print_lines(filename):\n",
+    "    with open(filename) as file:\n",
+    "        for line in file:\n",
+    "            print(line.strip())\n",
+    "\n",
+    "print_lines('data/names.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "write a python function reads a file and returns the individual lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_lines(filename):\n",
+    "    with open(filename) as file:\n",
+    "        for line in file:\n",
+    "            yield line.strip()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "function that reads individual words from a text file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_words(filename, separator=' '):\n",
+    "    for line in get_lines(filename):\n",
+    "        for word in line.split(separator):\n",
+    "            yield word"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a python function that reads a file and returns the letters in the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_letters(filename):\n",
+    "    for word in get_words(filename): # first get the word\n",
+    "        for letter in list(word): # then convert each word into a list of its letters\n",
+    "            yield letter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Iterate over the lines of a text file. Find all of the words (i.e., non-whitespace surrounded by whitespace) that contain only integers, and sum them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "92"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sum_ints(filename):\n",
+    "    total = 0\n",
+    "    for word in get_words(filename):\n",
+    "        if str.isdigit(word):\n",
+    "            total = total + int(word)\n",
+    "    return total\n",
+    "\n",
+    "sum_ints('data/numbers.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read through a text file, line by line. Use a dict to keep track of how many times each vowel (a, e, i, o, and u) appears in the file. Print the resulting tabulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 17, 'u': 4, 'i': 9, 'o': 4, 'e': 5, 'E': 1}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def vowel_frequencies(filename):\n",
+    "    frequencies = {}\n",
+    "    for letter in get_letters(filename):\n",
+    "        if is_vowel(letter):\n",
+    "            frequencies[letter] = frequencies.get(letter, 0) + 1\n",
+    "    return frequencies\n",
+    "\n",
+    "vowel_frequencies('data/names.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this exercise, write a function, passwd_to_dict, that reads from a Unix-style “password file,” commonly stored as /etc/passwd, and returns a dict based on it. The function passwd_to_dict should return a dict based on /etc/passwd in\n",
+    "which the dict’s keys are usernames and the values are the users’ IDs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nobody': '-2',\n",
+       " 'root': '0',\n",
+       " 'daemon': '1',\n",
+       " '_uucp': '4',\n",
+       " '_taskgated': '13',\n",
+       " '_networkd': '24',\n",
+       " '_installassistant': '25',\n",
+       " '_lp': '26',\n",
+       " '_postfix': '27',\n",
+       " '_scsd': '31',\n",
+       " '_ces': '32',\n",
+       " '_mcxalr': '54',\n",
+       " '_appleevents': '55',\n",
+       " '_geod': '56',\n",
+       " '_serialnumberd': '58',\n",
+       " '_devdocs': '59',\n",
+       " '_sandbox': '60',\n",
+       " '_mdnsresponder': '65',\n",
+       " '_ard': '67',\n",
+       " '_www': '70',\n",
+       " '_eppc': '71',\n",
+       " '_cvs': '72',\n",
+       " '_svn': '73',\n",
+       " '_mysql': '74',\n",
+       " '_sshd': '75',\n",
+       " '_qtss': '76',\n",
+       " '_cyrus': '77',\n",
+       " '_mailman': '78',\n",
+       " '_appserver': '79',\n",
+       " '_clamav': '82',\n",
+       " '_amavisd': '83',\n",
+       " '_jabber': '84',\n",
+       " '_appowner': '87',\n",
+       " '_windowserver': '88',\n",
+       " '_spotlight': '89',\n",
+       " '_tokend': '91',\n",
+       " '_securityagent': '92',\n",
+       " '_calendar': '93',\n",
+       " '_teamsserver': '94',\n",
+       " '_update_sharing': '95',\n",
+       " '_installer': '96',\n",
+       " '_atsserver': '97',\n",
+       " '_ftp': '98',\n",
+       " '_unknown': '99',\n",
+       " '_softwareupdate': '200',\n",
+       " '_coreaudiod': '202',\n",
+       " '_screensaver': '203',\n",
+       " '_locationd': '205',\n",
+       " '_trustevaluationagent': '208',\n",
+       " '_timezone': '210',\n",
+       " '_lda': '211',\n",
+       " '_cvmsroot': '212',\n",
+       " '_usbmuxd': '213',\n",
+       " '_dovecot': '214',\n",
+       " '_dpaudio': '215',\n",
+       " '_postgres': '216',\n",
+       " '_krbtgt': '217',\n",
+       " '_kadmin_admin': '218',\n",
+       " '_kadmin_changepw': '219',\n",
+       " '_devicemgr': '220',\n",
+       " '_webauthserver': '221',\n",
+       " '_netbios': '222',\n",
+       " '_warmd': '224',\n",
+       " '_dovenull': '227',\n",
+       " '_netstatistics': '228',\n",
+       " '_avbdeviced': '229',\n",
+       " '_krb_krbtgt': '230',\n",
+       " '_krb_kadmin': '231',\n",
+       " '_krb_changepw': '232',\n",
+       " '_krb_kerberos': '233',\n",
+       " '_krb_anonymous': '234',\n",
+       " '_assetcache': '235',\n",
+       " '_coremediaiod': '236',\n",
+       " '_xcsbuildagent': '237',\n",
+       " '_xcscredserver': '238',\n",
+       " '_launchservicesd': '239'}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def passwd_to_dict(filename):\n",
+    "    details = {}\n",
+    "    for line in get_lines(filename):\n",
+    "        if line[0] != '#':\n",
+    "           fields = line.split(':')\n",
+    "           user_name = fields[0]\n",
+    "           user_id = fields[2]\n",
+    "           details[user_name] = user_id\n",
+    "    return details\n",
+    "\n",
+    "passwd_to_dict('data/password.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The challenge for this exercise is to write a wordcount function that mimics the wc\n",
+    "Unix command. The function will take a filename as input and will print four lines\n",
+    "of output:\n",
+    "1. Number of characters (including whitespace)\n",
+    "2. Number of words (separated by whitespace)\n",
+    "3. Number of lines\n",
+    "4. Number of unique words (case sensitive, so “NO” is different from “no”)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'characters': 110, 'words': 16, 'lines': 8, 'unique': 15}"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def word_count(filename):\n",
+    "    return {\n",
+    "        'characters': len(list(get_letters(filename))),\n",
+    "        'words': len(list(get_words(filename))),\n",
+    "        'lines': len(list(get_lines(filename))),\n",
+    "        'unique': len(set(get_words(filename)))\n",
+    "    }\n",
+    "\n",
+    "word_count('data/names.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ask the user to enter the name of a text file and then (on one line, separated by spaces) words whose frequencies should be counted in that file. Count how many times those words appear in a dict, using the user-entered words as the\n",
+    "keys and the counts as the values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a dict in which the keys are the names of files on your system and the values are the sizes of those files. To calculate the size, you can use os.stat (http://mng.bz/dyyo)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given a directory, read through each file and count the frequency of each letter. (Force letters to be lowercase, and ignore nonletter characters.) Use a dict to keep track of the letter frequencies. What are the five most common letters\n",
+    "across all of these files?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
