--- a/Python Workout Book.ipynb
+++ b/Python Workout Book.ipynb
@@ -2845,63 +2845,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'kwargs': {'title': 'mr', 'age': 26}}\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "'<person title=\"mr\" age=\"26\">kasozi vincet</person>'"
+       "'<person title=\"mr\" nationality=\"ugandan\">kasozi vincent</person>'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def dict_to_str(_dict):\n",
-    "    attribs = []\n",
+    "    attributes = []\n",
     "    for (key, value) in _dict.items():\n",
-    "        attribs.append(f'{key}=\"{value}\"')\n",
-    "    return ' '.join(attribs)\n",
+    "        attributes.append(f'{key}=\"{value}\"')\n",
+    "    return ' '.join(attributes)\n",
     "\n",
-    "def my_xml(tag_name, content='', **kwargs): \n",
-    "    print(kwargs)\n",
-    "    attributes = dict_to_str(kwargs['kwargs'])\n",
+    "def my_xml(tag_name, content='', **kwargs):\n",
+    "    attributes = dict_to_str(kwargs)\n",
     "    return f'<{tag_name} {attributes}>{content}</{tag_name}>'\n",
-    "my_xml(tag_name='person', content='kasozi vincet', kwargs={'title': 'mr', 'age':26})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name=\"kasozi\"\n",
-      "age=\"4\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "d = {\n",
-    "    'name': 'kasozi',\n",
-    "    'age': 4\n",
-    "}\n",
     "\n",
-    "for (key, value) in d.items():\n",
-    "    print(f'{key}=\"{value}\"')"
+    "my_xml(tag_name='person', content='kasozi vincent', title='mr', nationality='ugandan')"
    ]
   },
   {
@@ -2913,16 +2882,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import shutil\n",
+    "\n",
+    "def copyfile(in_file_name, *args):\n",
+    "    for file_name in args:\n",
+    "        shutil.copy(in_file_name, file_name)\n",
+    "\n",
+    "copyfile('content.txt', 'kasozi.txt', 'vanessa.txt', 'daniel.txt')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Write a “factorial” function that takes any number of numeric arguments and returns the result of multiplying them all by one another."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1344"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factorial(*args):\n",
+    "    product = 1\n",
+    "    for number in args:\n",
+    "        product = product * number\n",
+    "    return product\n",
+    "factorial(4, 6, 7, 8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write an anyjoin function that works similarly to str.join, except that the first argument is a sequence of any types (not just of strings), and the second argument is the “glue” that we put between elements, defaulting to \" \" (a space). So anyjoin([1,2,3]) will return 1 2 3, and anyjoin('abc', pass:'**') will return pass:a**b**c."
    ]
   },
   {
@@ -2936,8 +2945,227 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write an anyjoin function that works similarly to str.join, except that the first argument is a sequence of any types (not just of strings), and the second argument is the “glue” that we put between elements, defaulting to \" \" (a space). So anyjoin([1,2,3]) will return 1 2 3, and anyjoin('abc', pass:'**') will return pass:a**b**c."
+    "For this exercise, I want you to write a function (calc) that expects a single argument—a string containing a simple math expression in prefix notation—with an operator and two numbers. Your program will parse the input and produce the appropriate output."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def add(a, b): return a + b\n",
+    "def sub(a, b): return a - b\n",
+    "def mul(a, b): return a * b\n",
+    "def div(a, b): return a / b\n",
+    "\n",
+    "operators = {\n",
+    "    '+': add,\n",
+    "    '-': sub,\n",
+    "    '*': mul,\n",
+    "    '/': div\n",
+    "}\n",
+    "\n",
+    "def calc(expression):\n",
+    "    op, arg1, arg2 = expression.strip().split()\n",
+    "    return operators[op](int(arg1), int(arg2))\n",
+    "\n",
+    "calc('* 2 5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Expand the program you wrote, such that the user’s input can contain any number of numbers, not just two. The program will thus handle + 3 5 7 or / 100 5 5, and will apply the operator from left to right—giving the answers 15 and 4, respectively"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calc(expression):\n",
+    "    op, *operands = expression.strip().split()\n",
+    "    operands = [int(operand) for operand in operands]\n",
+    "    result = operands[0]\n",
+    "    for operand in operands[1:]:\n",
+    "        result = operators[op](result, operand)\n",
+    "    return result\n",
+    "\n",
+    "calc('/ 100 5 5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function, apply_to_each, that takes two arguments: a function that takes a single argument, and an iterable. Return a list whose values are the result of applying the function to each element in the iterable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def apply_to_each(func, iterable):\n",
+    "    results = []\n",
+    "    for item in iterable:\n",
+    "        results.append(func(item))\n",
+    "    return results\n",
+    "\n",
+    "apply_to_each(lambda a: a + 1, [1, 2, 3, 4, 5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function, transform_lines, that takes three arguments: a function that takes a single argument, the name of an input file, and the name of an output file. Calling the function will run the function on each line of the input file, with the results written to the output file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def transform_lines(func, in_file, out_file):\n",
+    "    with open(in_file) as _input, open(out_file, 'w') as _output:\n",
+    "        for line in _input:\n",
+    "            transformed_line = func(line)\n",
+    "            _output.write(transformed_line)\n",
+    "\n",
+    "transform_lines(str.upper, 'content.txt', 'output.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this exercise, we’re going to create a password-generation function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'&FDS8Sf$'"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "def generate_passwd(characters, length = 8):\n",
+    "    result = []\n",
+    "    for i in range(length):\n",
+    "        result.append(random.choice(characters))\n",
+    "    return ''.join(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that you’ve written a function to create passwords, write create_password_checker, which checks that a given password meets the IT staff’s acceptability criteria. In other words, create a function with four parameters: min_\n",
+    "uppercase, min_lowercase, min_punctuation, and min_digits. These represent the minimum number of uppercase letters, lowercase letters, punctuations, and digits for an acceptable password. The output from create_password_checker is a function that takes a potential password (string) as its input and returns a Boolean value indicating whether the string is an acceptable password."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function, compose, that takes two functions as arguments (f1 and f2) and returns a single function, g. Invoking g(x) should return the same result as invoking f2(f1(x))."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compose(func1, func2):\n",
+    "    return lambda a: func2(func1(a))\n",
+    "\n",
+    "composite = compose(str.upper, len)\n",
+    "composite('kasozi')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a function, getitem, that takes a single argument and returns a function f. The returned f can then be invoked on any data structure whose elements can be selected via square brackets, and then returns that item. So if I invoke f = getitem('a'), and if I have a dict d = {'a':1, 'b':2}, then f(d) will return 1. (This is very similar to operator.itemgetter, a very useful function in many circumstances.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
